--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <title>Expensify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="/dist/styles.css" type="text/css">
 </head>
   <body>
         
         <div id="app"></div>
-        <script src="/bundle.js"></script>
+        <script src="/dist/bundle.js"></script>
   </body>
 </html>
